# ulexec

./: Cargo.toml  PKGBUILD  README.md
.cargo/: config.toml
.github/: sstrip
.github/workflows/: ci.yml
src/: main.rs
