[package]
name = "ulexec"
version = "0.0.1"
edition = "2021"
license = "MIT"
readme = "README.md"
description = "A tool for loading and executing PE on Windows and ELF on Linux from memory"

[profile.release]
lto = true
panic = "abort"
opt-level = "z"
strip = "symbols"
debug  = false
codegen-units = 1

[profile.dev]
panic = "abort"
opt-level = 0

[dependencies]
clap = { version = "4.5.19", features = [ "derive" ] }

[target.'cfg(target_os = "windows")'.dependencies]
memexec = "0.2.0"
# reqwest = { version = "0.12.8", features = ["blocking"] }
reqwest = { version = "0.12.8", features = ["blocking", "rustls-tls"] }

[target.'cfg(target_os = "linux")'.dependencies]
userland-execve = "0.2.0"
nix = { version = "0.29.0", features = [ "fs", "process" ] }
reqwest = { version = "0.12.8", features = ["blocking", "native-tls-vendored"] }
